packages/smritidb-c/include/smritidb.h

/*
 * smritidb.h — stable C ABI for the Smritidb associative store.
 *
 * Generated by cbindgen. Do not edit by hand; regenerate via:
 *
 *   cbindgen --config cbindgen.toml --crate smritidb-c --output include/smritidb.h
 *
 * Memory ownership:
 *  - Pointers returned via `out_*` parameters or directly are owned by the
 *    caller and MUST be released via the matching `smritidb_free_*` helper.
 *  - The opaque `SmritidbStore*` handle is freed exclusively via
 *    `smritidb_close`.
 *  - Strings returned by `smritidb_last_error` are owned by the library and
 *    valid until the next call into smritidb on the same thread.
 *
 * Error model:
 *  - Functions that can fail return a non-zero int status code, or NULL for
 *    pointer-returning functions. Call `smritidb_last_error()` to fetch a
 *    human-readable diagnostic for the current thread.
 */


#ifndef SMRITIDB_H
#define SMRITIDB_H

#pragma once

/* Generated with cbindgen:0.29.2 */

/* WARNING: this file is generated by cbindgen. Do not edit by hand. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Success.
 */
#define SMRITIDB_STATUS_OK 0

/**
 * One or more arguments were invalid (null pointer, non-UTF8, etc.).
 */
#define SMRITIDB_STATUS_INVALID_ARG 1

/**
 * Dimension or value size mismatch.
 */
#define SMRITIDB_STATUS_DIMENSION_MISMATCH 2

/**
 * Value exceeds the configured cap.
 */
#define SMRITIDB_STATUS_VALUE_TOO_LARGE 3

/**
 * Item not found.
 */
#define SMRITIDB_STATUS_NOT_FOUND 4

/**
 * Persistence (I/O, database) error.
 */
#define SMRITIDB_STATUS_PERSISTENCE 5

/**
 * Snapshot corruption.
 */
#define SMRITIDB_STATUS_CORRUPTION 6

/**
 * Catch-all internal error.
 */
#define SMRITIDB_STATUS_INTERNAL 7

/**
 * Opaque persistent store handle. Allocated via `smritidb_open_*`; freed via
 * `smritidb_close`.
 */
typedef struct SmritidbStore SmritidbStore;

/**
 * A heap-allocated byte buffer owned by the caller. Free via
 * `smritidb_free_bytes`.
 */
typedef struct {
  uint8_t *data;
  uintptr_t len;
  uintptr_t cap;
} SmritidbBytes;

/**
 * A recall result. `id` is a NUL-terminated UTF-8 string; `value` is the raw
 * stored bytes. Both are owned by the caller; release the whole array via
 * `smritidb_free_matches`.
 */
typedef struct {
  char *id;
  double similarity;
  SmritidbBytes value;
  uint32_t access_count;
} SmritidbMatch;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Returns a pointer to a NUL-terminated UTF-8 string describing the most
 * recent error on the current thread, or NULL if there has been no error
 * since the last successful call. The pointer is valid until the next call
 * into smritidb from the same thread.
 */
const char *smritidb_last_error(void);

/**
 * Open (or create) a SQLite-backed persistent store at `path`.
 *
 * Returns NULL on failure; call `smritidb_last_error` for details. Pass
 * `dimension == 0` to use the core default (10_000).
 */
SmritidbStore *smritidb_open_sqlite(const char *path, uint32_t dimension);

/**
 * Open an in-memory persistent store. Useful for tests.
 */
SmritidbStore *smritidb_open_memory(uint32_t dimension);

/**
 * Insert (or update) an item keyed by the UTF-8 string `key`. Returns
 * `SMRITIDB_STATUS_OK` on success and writes a heap-allocated NUL-terminated
 * id to `*out_id`. The caller MUST free `*out_id` via `smritidb_free_string`.
 */
int smritidb_put(SmritidbStore *store,
                 const char *key,
                 const uint8_t *value,
                 uintptr_t value_len,
                 char **out_id);

/**
 * Recall the top-K matches for the UTF-8 cue. Writes a heap-allocated array
 * of `SmritidbMatch` of length `*out_count` to `*out_matches`. Free via
 * `smritidb_free_matches(*out_matches, *out_count)`.
 */
int smritidb_recall(SmritidbStore *store,
                    const char *cue,
                    uint32_t top_k,
                    double min_similarity,
                    SmritidbMatch **out_matches,
                    uintptr_t *out_count);

/**
 * Number of items currently in the store.
 */
uintptr_t smritidb_size(const SmritidbStore *store);

/**
 * Hypervector dimension this store was opened with.
 */
uint32_t smritidb_dimension(const SmritidbStore *store);

/**
 * Force-persist any pending in-memory state to the backing adapter.
 */
int smritidb_persist(SmritidbStore *store);

/**
 * Close and free the store. The pointer MUST NOT be used afterwards.
 */
void smritidb_close(SmritidbStore *store);

/**
 * Free a string returned via an `out_*` parameter.
 */
void smritidb_free_string(char *s);

/**
 * Free a byte buffer returned via an `out_*` parameter or as part of a
 * `SmritidbMatch` (when peeled out separately).
 */
void smritidb_free_bytes(SmritidbBytes bytes);

/**
 * Free an array of `SmritidbMatch` returned by `smritidb_recall`.
 */
void smritidb_free_matches(SmritidbMatch *matches, uintptr_t count);

/**
 * Return a pointer to the static NUL-terminated spec version string. The
 * pointer is static and never freed.
 */
const char *smritidb_spec_version(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* SMRITIDB_H */